Fixed banner clipping

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -52,7 +52,7 @@
     }
 
     .banner-frame {
-      background-position: center bottom -18px;
+      background-position: center bottom -23px;
       background-size: auto 100vh;
       background-size: auto 100svh;
       display: grid;
